[package]
name = "tinychat-api"
version = "0.1.0"
authors = ["Tom Streller <tom.streller@tutti.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
enclose = "1.1"
env_logger = "0.8"
log = "0.4"
r2d2 = "0.8"
rand = "0.7"
jsonwebtoken = "7.2"
anyhow = "1.0"
crossbeam-channel = "0.5"

chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "0.8", features = ["v4", "serde"] }

tokio-postgres = { version = "0.7", features = ["with-uuid-0_8", "with-chrono-0_4"] }

warp = { version = "0.3", features = ["compression", "websocket"] }

tokio = { version = "1.0", features = ["full"] }

futures = { version = "0.3", default-features = false }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

juniper = { git = "https://github.com/graphql-rust/juniper", branch = "master", features = ["expose-test-schema"] }
juniper_warp = { git = "https://github.com/graphql-rust/juniper", branch = "master", features = ["subscriptions"] }
juniper_graphql_ws = { git = "https://github.com/graphql-rust/juniper", branch = "master" }