[package]
name = "tinychat-api"
version = "0.1.0"
authors = ["Tom Streller <tom.streller@tutti.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
enclose = "1.1.8"
env_logger = "0.9.0"
log = "0.4.14"
r2d2 = "0.8.9"
rand = "0.8.4"
jsonwebtoken = "7.2.0"
anyhow = "1.0.43"
crossbeam-channel = "0.5.1"
async-stream = "0.3.2"

chrono = { version = "0.4.19", features = ["serde"] }
uuid = { version = "0.8.2", features = ["v4", "serde"] }

tokio-postgres = { version = "0.7.2", features = ["with-uuid-0_8", "with-chrono-0_4"] }

warp = { version = "0.3.1", features = ["compression", "websocket"] }

tokio = { version = "1.10.0", features = ["full"] }

futures = { version = "0.3.16", default-features = false }

serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.66"

juniper = "0.15.7"
juniper_warp = { version = "0.7.0", features = ["subscriptions"] }
juniper_graphql_ws = "0.3.0"

# juniper = { git = "https://github.com/graphql-rust/juniper", branch = "master", features = ["expose-test-schema"] }
# juniper_warp = { git = "https://github.com/graphql-rust/juniper", branch = "master", features = ["subscriptions"] }
# juniper_graphql_ws = { git = "https://github.com/graphql-rust/juniper", branch = "master" }
